cli/tests/snapshots/main__formatting@json-null.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-null.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
null

-----------------------------------end input------------------------------------
|                                                                              | printWidth

