cli/tests/snapshots/main__formatting@json-number.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-number.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
0

-----------------------------------end input------------------------------------
|                                                                              | printWidth

