cli/tests/snapshots/main__formatting@json-pass1.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-pass1.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
[
    "JSON Test Pattern pass1",
    {"object with 1 member": ["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890e34,
        "": 23456789012.0e66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\"",
        "backslash": "\\",
        "controls": "\b\f\n\r\t",
        "slash": "/ & /",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\u0123\u4567\u89AB\uCDEF\uABCD\uEF4A",
        "true": true,
        "false": false,
        "null": null,
        "array": [],
        "object": {},
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d ": [1, 2, 3, 4, 5, 6, 7],
        "compact": [1, 2, 3, 4, 5, 6, 7],
        "jsontext": "{\"object with 1 member\":[\"array with 1 element\"]}",
        "quotes": "&#34; \u0022 %22 0x22 034 &#x22;",
        "/\\\"\uCAFE\uBABE\uAB98\uFCDE\uBCDA\uEF4A\b\f\n\r\t`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
    },
    0.5,
    98.6,
    99.44,
    1066,
    1.0e1,
    0.1e1,
    1.0e-1,
    1.0e0,
    2.0e0,
    2.0e-0,
    "rosebud"
]

-----------------------------------end input------------------------------------
|                                                                              | printWidth

