cli/tests/snapshots/main__formatting@json-positive-number.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-positive-number.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
123

-----------------------------------end input------------------------------------
|                                                                              | printWidth

