cli/tests/snapshots/main__formatting@json-property-key.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-property-key.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
{
    "a": 123
}

-----------------------------------end input------------------------------------
|                                                                              | printWidth

