cli/tests/snapshots/main__formatting@json-single-quote.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-single-quote.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
"hello"

-----------------------------------end input------------------------------------
|                                                                              | printWidth

