cli/tests/snapshots/main__formatting@json-string.json.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/json/json-string.json
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
"string"

-----------------------------------end input------------------------------------
|                                                                              | printWidth

