cli/tests/snapshots/main__formatting@multiple-headings-1.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/heading/multiple-headings-1.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
# I'm a heading 1

## I'm a heading 2

### I'm a heading 3

#### I'm a heading 4

##### I'm a heading 5

###### I'm a heading 6

-----------------------------------end input------------------------------------
|                                                                              | printWidth

