cli/tests/snapshots/main__formatting@paragraph-1.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/paragraph/paragraph-1.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
I am a paragraph.

-----------------------------------end input------------------------------------
|                                                                              | printWidth

