cli/tests/snapshots/main__formatting@paragraph-2.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/paragraph/paragraph-2.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
Foo bar

-----------------------------------end input------------------------------------
|                                                                              | printWidth

